--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@ html {
   box-sizing: border-box;
   background-color: mediumslateblue;
   color: white;
-  /* font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif; */
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   font-size: 1em;
 }
 
@@ -23,13 +22,12 @@ html {
 
 button {
   border: none;
+  font-size: 1em;
 }
 
-table,
-tr,
-th,
-td {
+table {
   border: 1px solid turquoise;
+  padding: 1em;
 }
 
 .round {
@@ -43,18 +41,19 @@ td {
 }
 
 .score-row {
-  background-color: gray;
   height: 2em;
 }
 
 .score-header {
-  width: 10em;
+  /* background-color: coral; */
+  width: 3em;
 }
 
 .score-data {
-  background-color: silver;
-  width: 5em;
-  height: 5em;
+  background-color: lightcoral;
+  color: white;
+  width: 3em;
+  height: 3em;
   font-size: 2em;
 }
 
