--- a/style.css
+++ b/style.css
@@ -83,6 +83,11 @@ table {
   height: 5em;
 }
 
+.computer-buttons button {
+  background-color: lightgray;
+  color: grey;
+}
+
 .message-top,
 .message-middle,
 .message-bottom {
