--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ table {
 .score {
   display: flex;
   justify-content: center;
+  box-shadow: 0px 0px 15px 1px black;
 }
 
 .score-row {
@@ -45,7 +46,6 @@ table {
 }
 
 .score-header {
-  /* background-color: coral; */
   width: 3em;
 }
 
@@ -65,10 +65,12 @@ table {
 
 .computer {
   background-color: turquoise;
+  box-shadow: 0px 0px 15px 1px black;
 }
 
 .player {
   background-color: violet;
+  box-shadow: 0px 0px 15px 1px black;
 }
 
 .computer-buttons,
@@ -88,9 +90,15 @@ table {
   color: grey;
 }
 
+.player-buttons button {
+  border: 3px solid lightcoral;
+  box-shadow: 0px 0px 15px 1px black;
+}
+
 .message-top,
 .message-middle,
 .message-bottom {
   border: 1px solid turquoise;
+  box-shadow: 0px 0px 15px 1px black;
   padding: 20px;
 }
