--- a/style.css
+++ b/style.css
@@ -64,13 +64,15 @@ table {
 }
 
 .computer {
+  /* border: 1px solid black; */
   background-color: turquoise;
-  box-shadow: 0px 0px 15px 1px black;
+  /* box-shadow: 0px 0px 15px 1px black; */
 }
 
 .player {
+  /* border: 1px solid black; */
   background-color: violet;
-  box-shadow: 0px 0px 15px 1px black;
+  /* box-shadow: 0px 0px 15px 1px black; */
 }
 
 .computer-buttons,
