--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 html {
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
   background-color: mediumslateblue;
   color: whitesmoke;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
-  font-size: 1em;
 }
 
 *,
@@ -20,11 +19,11 @@ html {
   border-radius: 5em;
 }
 
-/* body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-} */
+body {
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 1em;
+}
 
 button {
   border: none;
