--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ table {
 .message-top,
 .message-middle,
 .message-bottom {
+  min-height: 63px;
   border: 2px solid coral;
   box-shadow: 0px 0px 15px 1px black;
   padding: 20px;
